--- a/release/kubernetes-manifests-remote.yaml
+++ b/release/kubernetes-manifests-remote.yaml
@@ -37,22 +37,22 @@ spec:
           image: gcr.io/arctiqteam-images/microservices-demo/frontend-remote:v1.0.2
           ports:
           - containerPort: 8080
-          # readinessProbe:
-          #   initialDelaySeconds: 10
-          #   httpGet:
-          #     path: "/_healthz"
-          #     port: 8080
-          #     httpHeaders:
-          #     - name: "Cookie"
-          #       value: "shop_session-id=x-readiness-probe"
-          # livenessProbe:
-          #   initialDelaySeconds: 10
-          #   httpGet:
-          #     path: "/_healthz"
-          #     port: 8080
-          #     httpHeaders:
-          #     - name: "Cookie"
-          #       value: "shop_session-id=x-liveness-probe"
+          readinessProbe:
+            initialDelaySeconds: 10
+            httpGet:
+              path: "/_healthz"
+              port: 8080
+              httpHeaders:
+              - name: "Cookie"
+                value: "shop_session-id=x-readiness-probe"
+          livenessProbe:
+            initialDelaySeconds: 10
+            httpGet:
+              path: "/_healthz"
+              port: 8080
+              httpHeaders:
+              - name: "Cookie"
+                value: "shop_session-id=x-liveness-probe"
           env:
           - name: PORT
             value: "8080"
