--- a/release/istio-manifests.yaml
+++ b/release/istio-manifests.yaml
@@ -45,31 +45,13 @@
 #       privateKey: /etc/istio/ingressgateway-certs/tls.key
 ---
 apiVersion: networking.istio.io/v1alpha3
-kind: DestinationRule
-metadata:
-  name: frontend
-  namespace: hipster-store
-spec:
-  host: frontend
-  trafficPolicy:
-    tls:
-      mode: ISTIO_MUTUAL
-  subsets:
-  - name: local
-    labels:
-      cluster: local
-  - name: remote
-    labels:
-      cluster: remote
----
-apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: frontend-ingress
   namespace: hipster-store
 spec:
   hosts:
-  - "hipster-store.arctiqtim.next.gkeop.labs.arctiq.ca"
+  - "hipster-store.arctiqtim-istio.next.gkeop.labs.arctiq.ca"
   gateways:
   - istio-system/frontend-gateway
   http:
@@ -78,14 +60,6 @@ spec:
         host: frontend
         port:
           number: 80
-        subset: local
-      weight: 50
-    - destination:
-        host: frontend
-        port:
-          number: 80
-        subset: remote
-      weight: 50
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
