--- a/release/istio-manifests.yaml
+++ b/release/istio-manifests.yaml
@@ -60,25 +60,25 @@
 #         host: frontend
 #         port:
 #           number: 80
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: frontend
-  namespace: hipster-store
-spec:
-  hosts:
-  - "frontend.hipster-store.svc.cluster.local"
-  http:
-  # - fault:
-  #     abort:
-  #       httpStatus: 500
-  #       percent: 100
-  - route:
-    - destination:
-        host: frontend
-        port:
-          number: 80
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: frontend
+#   namespace: hipster-store
+# spec:
+#   hosts:
+#   - "frontend.hipster-store.svc.cluster.local"
+#   http:
+#   # - fault:
+#   #     abort:
+#   #       httpStatus: 500
+#   #       percent: 100
+#   - route:
+#     - destination:
+#         host: frontend
+#         port:
+#           number: 80
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: ServiceEntry
