--- a/release/istio-manifests.yaml
+++ b/release/istio-manifests.yaml
@@ -43,23 +43,23 @@
 #       mode: SIMPLE
 #       serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
 #       privateKey: /etc/istio/ingressgateway-certs/tls.key
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: frontend-ingress
-  namespace: hipster-store
-spec:
-  hosts:
-  - "hipster-store.arctiqtim-istio.anthos.labs.arctiq.ca"
-  gateways:
-  - istio-system/frontend-gateway
-  http:
-  - route:
-    - destination:
-        host: frontend
-        port:
-          number: 80
+#---
+#apiVersion: networking.istio.io/v1alpha3
+#kind: VirtualService
+#metadata:
+#  name: frontend-ingress
+#  namespace: hipster-store
+#spec:
+#  hosts:
+#  - "hipster-store.arctiqtim-istio.anthos.labs.arctiq.ca"
+#  gateways:
+#  - istio-system/frontend-gateway
+#  http:
+#  - route:
+#    - destination:
+#        host: frontend
+#        port:
+#          number: 80
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
