--- a/release/namespace.yaml
+++ b/release/namespace.yaml
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-#  labels:
-#    istio-injection: enabled
+  labels:
+    istio-injection: enabled
   name: hipster-store
