--- a/release/istio-manifests.yaml
+++ b/release/istio-manifests.yaml
@@ -31,23 +31,23 @@ spec:
       protocol: HTTP
     hosts:
     - "*"
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: frontend-ingress
-  namespace: hipster-store
-spec:
-  hosts:
-  - "*"
-  gateways:
-  - frontend-gateway
-  http:
-  - route:
-    - destination:
-        host: frontend
-        port:
-          number: 80
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: frontend-ingress
+#   namespace: hipster-store
+# spec:
+#   hosts:
+#   - "*"
+#   gateways:
+#   - frontend-gateway
+#   http:
+#   - route:
+#     - destination:
+#         host: frontend
+#         port:
+#           number: 80
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
