--- a/release/kubernetes-manifests.yaml
+++ b/release/kubernetes-manifests.yaml
@@ -20,6 +20,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: emailservice
+  namespace: hipster-store
 spec:
   selector:
     matchLabels:
@@ -62,6 +63,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: emailservice
+  namespace: hipster-store
 spec:
   type: ClusterIP
   selector:
@@ -75,6 +77,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: checkoutservice
+  namespace: hipster-store
 spec:
   selector:
     matchLabels:
@@ -130,6 +133,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: checkoutservice
+  namespace: hipster-store
 spec:
   type: ClusterIP
   selector:
@@ -189,6 +193,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: recommendationservice
+  namespace: hipster-store
 spec:
   type: ClusterIP
   selector:
@@ -271,6 +276,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend
+  namespace: hipster-store
 spec:
   type: ClusterIP
   selector:
@@ -284,6 +290,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-external
+  namespace: hipster-store
 spec:
   type: LoadBalancer
   selector:
@@ -297,6 +304,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: paymentservice
+  namespace: hipster-store
 spec:
   selector:
     matchLabels:
@@ -333,6 +341,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: paymentservice
+  namespace: hipster-store
 spec:
   type: ClusterIP
   selector:
@@ -346,6 +355,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: productcatalogservice
+  namespace: hipster-store
 spec:
   selector:
     matchLabels:
@@ -390,6 +400,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: productcatalogservice
+  namespace: hipster-store
 spec:
   type: ClusterIP
   selector:
@@ -403,6 +414,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cartservice
+  namespace: hipster-store
 spec:
   selector:
     matchLabels:
@@ -446,6 +458,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cartservice
+  namespace: hipster-store
 spec:
   type: ClusterIP
   selector:
@@ -459,6 +472,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: loadgenerator
+  namespace: hipster-store
 spec:
   selector:
     matchLabels:
@@ -493,6 +507,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: currencyservice
+  namespace: hipster-store
 spec:
   selector:
     matchLabels:
@@ -536,6 +551,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: currencyservice
+  namespace: hipster-store
 spec:
   type: ClusterIP
   selector:
@@ -549,6 +565,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: shippingservice
+  namespace: hipster-store
 spec:
   selector:
     matchLabels:
@@ -593,6 +610,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: shippingservice
+  namespace: hipster-store
 spec:
   type: ClusterIP
   selector:
@@ -606,6 +624,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis-cart
+  namespace: hipster-store
 spec:
   selector:
     matchLabels:
@@ -646,6 +665,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis-cart
+  namespace: hipster-store
 spec:
   type: ClusterIP
   selector:
@@ -659,6 +679,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: adservice
+  namespace: hipster-store
 spec:
   selector:
     matchLabels:
@@ -705,6 +726,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: adservice
+  namespace: hipster-store
 spec:
   type: ClusterIP
   selector:
