--- a/release/istio-manifests.yaml
+++ b/release/istio-manifests.yaml
@@ -50,13 +50,29 @@ spec:
           number: 80
 ---
 apiVersion: networking.istio.io/v1alpha3
+kind: ServiceEntry
+metadata:
+  name: currency-provider-external
+  namespace: hipster-store
+spec:
+  hosts:
+  - www.ecb.europa.eu
+  ports:
+  - number: 80
+    name: http
+    protocol: HTTP
+  - number: 443
+    name: https
+    protocol: HTTPS
+---
+apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: frontend
   namespace: hipster-store
 spec:
   hosts:
-  - "frontend.default.svc.cluster.local"
+  - "frontend.hipster-store.svc.cluster.local"
   http:
   - route:
     - destination:
