--- a/release/kubernetes-manifests.yaml
+++ b/release/kubernetes-manifests.yaml
@@ -63,7 +63,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: emailservice
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   type: ClusterIP
   selector:
@@ -77,7 +77,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: checkoutservice
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   selector:
     matchLabels:
@@ -133,7 +133,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: checkoutservice
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   type: ClusterIP
   selector:
@@ -147,7 +147,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: recommendationservice
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   selector:
     matchLabels:
@@ -194,7 +194,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: recommendationservice
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   type: ClusterIP
   selector:
@@ -208,7 +208,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   selector:
     matchLabels:
@@ -277,7 +277,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   type: ClusterIP
   selector:
@@ -291,7 +291,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: paymentservice
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   selector:
     matchLabels:
@@ -328,7 +328,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: paymentservice
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   type: ClusterIP
   selector:
@@ -342,7 +342,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: productcatalogservice
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   selector:
     matchLabels:
@@ -387,7 +387,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: productcatalogservice
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   type: ClusterIP
   selector:
@@ -401,7 +401,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cartservice
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   selector:
     matchLabels:
@@ -445,7 +445,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cartservice
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   type: ClusterIP
   selector:
@@ -459,7 +459,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: loadgenerator
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   selector:
     matchLabels:
@@ -494,7 +494,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: currencyservice
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   selector:
     matchLabels:
@@ -538,7 +538,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: currencyservice
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   type: ClusterIP
   selector:
@@ -552,7 +552,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: shippingservice
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   selector:
     matchLabels:
@@ -597,7 +597,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: shippingservice
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   type: ClusterIP
   selector:
@@ -611,7 +611,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis-cart
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   selector:
     matchLabels:
@@ -652,7 +652,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis-cart
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   type: ClusterIP
   selector:
@@ -666,7 +666,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: adservice
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   selector:
     matchLabels:
@@ -713,7 +713,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: adservice
-  namespace: hipster-store
+  namespace: onlineboutique
 spec:
   type: ClusterIP
   selector:
