--- a/release/kubernetes-manifests.yaml
+++ b/release/kubernetes-manifests.yaml
@@ -39,10 +39,10 @@ spec:
         env:
         - name: PORT
           value: "8080"
-        - name: DISABLE_TRACING
-          value: "True"
+        #- name: DISABLE_TRACING
+        #  value: "True"
         - name: DISABLE_PROFILER
-          value: "False"
+          value: "1"
         readinessProbe:
           periodSeconds: 5
           exec:
@@ -113,12 +113,12 @@ spec:
             value: "currencyservice:7000"
           - name: CART_SERVICE_ADDR
             value: "cartservice:7070"
-          - name: DISABLE_STATS
-            value: "True"
-          - name: DISABLE_TRACING
-            value: "True"
-          - name: DISABLE_PROFILER
-            value: "False"
+          #- name: DISABLE_STATS
+          #  value: "True"
+          #- name: DISABLE_TRACING
+          #  value: "True"
+          #- name: DISABLE_PROFILER
+          #  value: "False"
           # - name: JAEGER_SERVICE_ADDR
           #   value: "jaeger-collector:14268"
           resources:
@@ -176,12 +176,12 @@ spec:
           value: "8080"
         - name: PRODUCT_CATALOG_SERVICE_ADDR
           value: "productcatalogservice:3550"
-        - name: DISABLE_TRACING
-          value: "True"
-        - name: DISABLE_PROFILER
-          value: "False"
-        - name: DISABLE_DEBUGGER
-          value: "False"
+        #- name: DISABLE_TRACING
+        #  value: "True"
+        #- name: DISABLE_PROFILER
+        #  value: "False"
+        #- name: DISABLE_DEBUGGER
+        #  value: "False"
         resources:
           requests:
             cpu: 30m
@@ -259,10 +259,10 @@ spec:
             value: "checkoutservice:5050"
           - name: AD_SERVICE_ADDR
             value: "adservice:9555"
-          - name: DISABLE_TRACING
-            value: "True"
-          - name: DISABLE_PROFILER
-            value: "False"
+          #- name: DISABLE_TRACING
+          #  value: "True"
+          #- name: DISABLE_PROFILER
+          #  value: "False"
           # - name: JAEGER_SERVICE_ADDR
           #   value: "jaeger-collector:14268"
           resources:
@@ -361,12 +361,12 @@ spec:
         env:
         - name: PORT
           value: "3550"
-        - name: DISABLE_STATS
-          value: "True"
-        - name: DISABLE_TRACING
-          value: "True"
-        - name: DISABLE_PROFILER
-          value: "False"
+        #- name: DISABLE_STATS
+        #  value: "True"
+        #- name: DISABLE_TRACING
+        #  value: "True"
+        #- name: DISABLE_PROFILER
+        #  value: "False"
         # - name: JAEGER_SERVICE_ADDR
         #   value: "jaeger-collector:14268"
         readinessProbe:
@@ -514,12 +514,12 @@ spec:
         env:
         - name: PORT
           value: "7000"
-        - name: DISABLE_TRACING
-          value: "True"
-        - name: DISABLE_PROFILER
-          value: "False"
-        - name: DISABLE_DEBUGGER
-          value: "False"
+       # - name: DISABLE_TRACING
+       #   value: "True"
+       # - name: DISABLE_PROFILER
+       #   value: "False"
+       # - name: DISABLE_DEBUGGER
+       #   value: "False"
         readinessProbe:
           exec:
             command: ["/bin/grpc_health_probe", "-addr=:7000"]
@@ -570,12 +570,12 @@ spec:
         env:
         - name: PORT
           value: "50051"
-        - name: DISABLE_STATS
-          value: "True"
-        - name: DISABLE_TRACING
-          value: "True"
-        - name: DISABLE_PROFILER
-          value: "False"
+        #- name: DISABLE_STATS
+        #  value: "True"
+        #- name: DISABLE_TRACING
+        #  value: "True"
+        #- name: DISABLE_PROFILER
+        #  value: "False"
         # - name: JAEGER_SERVICE_ADDR
         #   value: "jaeger-collector:14268"
         readinessProbe:
@@ -685,10 +685,10 @@ spec:
         env:
         - name: PORT
           value: "9555"
-        - name: DISABLE_STATS
-          value: "True"
-        - name: DISABLE_TRACING
-          value: "True"
+        #- name: DISABLE_STATS
+        #  value: "True"
+        #- name: DISABLE_TRACING
+        #  value: "True"
         #- name: JAEGER_SERVICE_ADDR
         #  value: "jaeger-collector:14268"
         resources:
