--- a/cloudbuild-devhops.yaml
+++ b/cloudbuild-devhops.yaml
@@ -23,7 +23,7 @@
 # Example invocation:
 # `gcloud builds submit --config=cloudbuild.yaml --substitutions=_ZONE=us-central1-b,_CLUSTER=demo-app-staging .`
 # gcloud builds submit --project arctiqteam-images --timeout=3600s --substitutions=TAG_NAME="v1.0.0"
-
+timeout: 1200s
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   args:
