--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -43,7 +43,7 @@ build:
   - image: adservice
     context: src/adservice
   tagPolicy:
-    gitCommit: {}
+    dateTime: {}
   local:
     useBuildkit: true
 deploy:
